@@ -1,3 +1,7 @@
+2007-01-29  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* theme-thumbnail.c: Mark some stuff as static.
+
 2007-01-19  Thomas Wood  <thos@gnome.org>
 
 	* gnome-theme-apply.c: (gnome_meta_theme_set):
